# h3geo

./: .gitignore  LICENSE  README.md  mix.exs
.github/workflows/: release.yml
benchmark/: benchmark.exs
lib/: h3_geo.ex
lib/mix/tasks/: benchmark.ex
native/h3geo/: Cargo.toml  README.md
native/h3geo/.cargo/: config.toml
native/h3geo/src/: lib.rs
test/: h3_geo_test.exs
test/support/: multipolygon.geojson  multipolygon_with_integers.geojson  polygon.geojson  small_polygon.geojson
