[package]
name = "h3geo"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "h3geo"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.31.0", default-features = false, features = [
  "derive",
] }
h3o = { version = "0.6.0", features = ["std", "geo"] }
geo = "0.27.0"
itertools = "0.12.1"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
